enum-ptr-test/tests/fail/compact_copy.stderr
error[E0277]: the trait bound `Foo<'a, 'b>: Copy` is not satisfied
 --> tests/fail/compact_copy.rs:5:10
  |
5 | #[derive(EnumPtr)]
  |          ^^^^^^^ the trait `Copy` is not implemented for `Foo<'a, 'b>`
  |
note: required by a bound in `CompactInnerCopy`
 --> $WORKSPACE/enum-ptr/src/base/inner.rs
  |
  | pub struct CompactInnerCopy<T: Compactable<Inner = Self> + Copy> {
  |                                                            ^^^^ required by this bound in `CompactInnerCopy`
  = note: this error originates in the derive macro `EnumPtr` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Foo<'a, 'b>` with `#[derive(Copy)]`
   |
8  | #[derive(Copy)]
   |
